src/AppBundle/Resources/public/css/color.css
/* ... */
.mega-menu1,
.wishlist-wrap .dropdown-menu,
.top-bar ul .dropdown-menu{
	border-top-color: #fea422;
}
.commenting-wrap-1 ul li:hover .commenting-dec{
	border-left-color: #fea422;
}
.input-dec3 .selectric-wrapper.selectric-open,
.input-dec3 textarea:focus,
.input-dec3 input[type="text"]:focus,
.header-4 .input-dec2 input[type="text"]:focus,
.header-3 .nav-search .input-dec2 input[type="text"]:focus{
	box-shadow: 0 0 0 1px #fea422 inset;
}
/*
============================================================
		   Transaction Effect
============================================================
*/
.input-dec3 .selectric-wrapper.selectric-open,
.categories-menu,
.select-menu .selectric-wrapper,
.header-4 .input-dec2 input[type="text"],
.top-bar .pull-left ul li a,
.lang-wrap.open button,
.user-dec a,
.social-1 li a,
.categories-ul li a,
.categories-ul li a i,
.categories-menu span,
.categories-menu i,
.categories-ul li a:before,
.navigation-wrap ul li a,
.text-filed-1 input[type="text"]:focus,
.select-menu .selectric-wrapper,
.text-filed-1 button,
.select-menu .selectric-items li,
.slider-caption a,
.main-banner .bx-wrapper .bx-controls-direction a:before,
.cart-2 a,
.tags-2 li a,
.featured-dec,
.featured-dec .text h5 a,
.featured-slider .owl-theme .owl-controls .owl-buttons div:before,
.books-tab li a:before,
.books-tab li a,
.book-tab-dec .text h5 a,
.add-cart,
.social-2 li a,
.comment-icon:hover,
.blog-meta li a,
.featured-blog1 .text h5 a,
.tabs-slider-wrap .owl-theme .owl-controls .owl-page span,
.publisher-slider .bx-wrapper .bx-pager.bx-default-pager a,
.book-tab-dec,
.play-icon,
.news-latter a,
.new-dec .date,
.date b,
.new-dec a,
.new-dec p,
.ft-nav li a,
.text-2 h3 a,
.featured2-dec .text .shopnow,
.featured2-dec .text h2 a,
.featured-style2 .text h2 a,
.featured-style2 .text .shopnow,
.author-book .readmore2,
.brand-wrap li a img,
.mega-menu1,
.inner-banner-dec .breadcrumb li a,
.selectric-items li,
.book-tab-dec .text h5 a,
.book-tab-bx .bx-wrapper .bx-controls-direction a,
.kf-pagination .pagination li a,
.page-label,
.brand-slider a img,
.brand-slider .owl-theme .owl-controls .owl-buttons div,
.wid-slider .bx-pager.bx-default-pager a,
.side_accordian .accordion:before,
.side-meta li a,
.side-meta li a:before,
.featured-dec3,
.featured-dec3 .text a,
.list-style-dec .blog-thumb-dec,
.list-style-dec .blog-thumb img,
.list-style-dec .blog-thumb-dec a,
.like-2,
.btn-2,
.blog1-hd h5 a,
.widget-pub-filter ul li a span,
.widget-pub-filter ul li a,
.blog-classic-dec .thumb img,
.thumb-links,
.thumb-links a,
.blog-classic-dec .text h2 a,
.bxclassic-blog .bx-pager.bx-default-pager a,
.bxclassic-blog .bx-wrapper .bx-controls-direction a:before,
.bxclassic-blog .bx-wrapper .bx-controls-direction a,
.widget-slider2 .bx-pager.bx-default-pager a,
.widget-slider2 .bx-wrapper .bx-controls-direction a,
.widget-slider2 .bx-wrapper .bx-controls-direction a:before,
.input-dec2 button,
.tabs-widget figure img,
.tabs-widget figure:before,
.tabs-widget .text h6 a,
.widget-tags ul li a,
.widget-accordian2 .side_accordian .accordion.accordion-open span,
.widget-archives ul li a,
.grid2-blog:before,
.blog-thumb-dec,
.shopnow,
.icon-3,
.video,
.dialog-button,
.loadnore a,
.payment-method,
.commenting-dec,
.reply-btn,
.commenting-hd h5 a,
.commenting-wrap-1 .heading-1 .btn-2,
.blog-nav span,
.blog-nav i,
.autor-blockquote .text h5 a,
.commenting2 ul:before,
.commenting-dec:before,
.widget-accordian .accordion,
.featured-author3 .thumb img,
.featured-author3 .social-1,
.featured-author3 .text h5 a,
.featured-author3 .text:before,
.thumb-slider .bx-wrapper .bx-controls-direction a,
.input-stepper button:hover,
.wishlist2 ul li a,
.wishlist2 ul li i,
.cart-3,
.book-tags li a,
.book-heading h3 a,
.zoomer,
.tags-1 li span,
.tags-1 li a,
.testimonial-slider .bx-wrapper .bx-controls-direction a,
.nav-dec > li ul,
.testimonial-dec .text a,
.copy-right p a,
.track,
.new-account,
.header-3 .nav-dec2 ul li a:before,
.header-3 .nav-dec2 ul li a,
.header-4 .nav-dec li a:before,
.contact-ft .text em,
.contact-ft address,
.comingsoon-dec .text > p a,
.input-dec2 input[type="text"],
.input-text input[type="text"],
.input-dec input[type=text],
.link a,
.cstmr-dec span,
.input-dec button,
.btn-3,
.input-dec3 textarea,
.input-dec3 input[type="text"],
.go-up,
.closed,
.banner2-pager i,
.banner2-pager,
#responsive-menu-button2 i,
.header-3 .nav-search .input-dec2 input[type="text"],
.brand-icons li a i,
.cart-wrap .cart i, .cart-wrap > a,.cart-wrap > a i
 {
	transition: all 0.3s ease-in-out;
	-webkit-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
}
/*
	  ============================================================
		  Content Selection
	  ============================================================
*/
::selection {
	background: #29adcd;
	color: #ffffff;
}
::-moz-selection {
 background: #29adcd;
 color: #ffffff;
}

.btn-2.disabled, .btn-2:hover.disabled {
	background-color: grey;
	border-color: grey;
}

